<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">YAKM - Yet Another Kernel Manager</string>
    <string name="checking_info">Checking info…</string>
    <string name="checking_root">Checking root access</string>
    <string name="searching_busybox">Searching for busybox</string>
    <string name="collecting_info">Collecting info</string>
    <string name="no_root">No root</string>
    <string name="no_busybox">No busybox</string>
    <string name="open">Open %s</string>
    <string name="select_picture">Select Picture</string>
    <string name="no_picture">No Picture</string>
    <string name="went_wrong">Something went wrong!</string>
    <string name="press_back_again_exit">Press back again to exit</string>
    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="cancel">Cancel</string>
    <string name="unknown">Unknown</string>
    <string name="warning">Warning!</string>
    <string name="apply_on_boot">Apply on boot</string>
    <string name="apply_on_boot_text">Applying settings in %d seconds.</string>
    <string name="apply_on_boot_complete">Applying settings completed.</string>
    <string name="apply_on_boot_canceled">Applying settings canceled.</string>
    <string name="not_in_range">Not in range</string>
    <string name="options">Options</string>
    <string name="more">More</string>
    <string name="permission_denied_write_storage">Permission denied for writing to storage!</string>
    <string name="save">Save</string>
    <string name="mhz">MHz</string>
    <string name="celsius">°C</string>
    <string name="fahrenheit">°F</string>
    <string name="mb">MB</string>
    <string name="ms">ms</string>
    <string name="mv">mV</string>
    <string name="min">min</string>
    <string name="mah">mAh</string>
    <string name="ma">mA</string>
    <string name="kb">kB</string>
    <string name="px">px</string>
    <string name="minus" translatable="false">-</string>
    <string name="plus" translatable="false">+</string>
    <string name="statistics">Statistics</string>
    <string name="kernel">Kernel</string>
    <string name="tools">Tools</string>
    <string name="other">Other</string>
    <string name="overall">Home</string>
    <string name="device">Device</string>
    <string name="memory">Memory</string>
    <string name="inputs">Inputs</string>
    <string name="cpu">CPU</string>
    <string name="cpu_hotplug">CPU Hotplug</string>
    <string name="cpu_voltage">CPU Voltage</string>
    <string name="gpu">GPU</string>
    <string name="thermal">Thermal</string>
    <string name="battery">Battery</string>
    <string name="sound">Sound</string>
    <string name="screen">Screen</string>
    <string name="wake">Wake Gestures</string>
    <string name="led">Display and LED</string>
    <string name="io_scheduler">I/O Scheduler</string>
    <string name="ksm">KSM</string>
    <string name="uksm">UKSM</string>
    <string name="lmk">Low Memory Killer</string>
    <string name="virtual_memory">Virtual Memory</string>
    <string name="entropy">Entropy</string>
    <string name="misc">Misc</string>
    <string name="custom_controls">Custom Controls</string>
    <string name="backup">Backup</string>
    <string name="build_prop_editor">Build prop Editor</string>
    <string name="profile">Profile</string>
    <string name="script_manger">Script Manager</string>
    <string name="on_boot">On Boot</string>
    <string name="settings">Settings</string>
    <string name="smartpack">YAKM</string>
    <string name="about">About</string>
    <string name="faq">FAQ</string>
    <string name="overall_summary">Welcome to YAKM - Yet Another Kernel Manager. Your device information and system status at a glance.</string>
    <string name="cpu_times">CPU Times</string>
    <string name="offline">Offline</string>
    <string name="core">Core %d</string>
    <string name="gpu_freq">GPU Frequency</string>
    <string name="refresh">Refresh</string>
    <string name="reset">Reset</string>
    <string name="restore">Restore</string>
    <string name="restore_sure_message">Are you sure to restore %s?</string>
    <string name="cluster_big" translatable="false">big</string>
    <string name="cluster_middle" translatable="false">Middle</string>
    <string name="cluster_little" translatable="false">LITTLE</string>
    <string name="deep_sleep">Deep sleep</string>
    <string name="uptime">Uptime</string>
    <string name="error_frequencies">Failed to load frequencies</string>
    <string name="unused_frequencies">Unused Frequencies</string>
    <string name="processor">Processor</string>
    <string name="vendor">Vendor</string>
    <string name="features">Features</string>
    <string name="ram">RAM</string>
    <string name="android_version">Android Version</string>
    <string name="android_api_level">Android SDK</string>
    <string name="android_codename">Android Codename</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="build_display_id">Build Display ID</string>
    <string name="baseband">Baseband</string>
    <string name="rom">ROM</string>
    <string name="bootloader">Bootloader</string>
    <string name="trustzone" translatable="false">TrustZone</string>
    <string name="hardware">Hardware</string>
    <string name="architecture">Architecture</string>
    <string name="treble_status">Project Treble Support</string>
    <string name="gpu_lib">GPU System Library</string>
    <string name="bus">Bus</string>
    <string name="product">Product</string>
    <string name="sysfs" translatable="false">Sysfs</string>
    <string name="handlers">Handlers</string>
    <string name="cpu_note">Please note that some features on this page, such as CPU Cores and Frequency control, are largely controlled by system processes. As a result, changes made on this page may not persist on many devices.</string>
    <string name="cores_singular">%d core</string>
    <string name="cores">%d cores</string>
    <string name="cpu_usage">CPU Usage</string>
    <string name="cpu_usage_string">%s CPU Usage</string>
    <string name="no_offline_core">You can\'t offline this core!</string>
    <string name="cpu_max_freq">CPU Maximum Frequency</string>
    <string name="cpu_max_freq_summary">Set the maximum frequency the CPU scales up to.</string>
    <string name="cpu_min_freq">CPU Minimum Frequency</string>
    <string name="cpu_min_freq_summary">Set the minimum frequency the CPU scales down to.</string>
    <string name="cpu_max_screen_off_freq">CPU Maximum Screen Off Frequency</string>
    <string name="cpu_max_screen_off_freq_summary">Set the maximum frequency the CPU scales up to when the screen is off.</string>
    <string name="cpu_governor">CPU Governor</string>
    <string name="cpu_governor_summary">The CPU governor determines how the CPU behaves in response to changes in workload. Changing the governor will impact how the CPU scales through the frequency steps available to your CPU.</string>
    <string name="cpu_governor_tunables">CPU Governor Tunables</string>
    <string name="governor_tunables_summary">The various configuration items which are Governor-dependent.</string>
    <string name="cpu_governor_tunables_read_error">Failed to read current governor of CPU.\n\nIf you are using a QCOM big.LITTLE device this is a known problem. The system forces the CPU to turn off cores making it extremely hard to read out CPU specific stats. Try to select this option again. The CPU sometimes refuses to turn on a core.</string>
    <string name="tunables_error">%s is not tuneable</string>
    <string name="tunables_title">Fine-tune the configuration items that are associated with \'%s\'</string>
    <string name="manual">Manual</string>
    <string name="mc_power_saving">Multicore Power Saving</string>
    <string name="mc_power_saving_summary">Try to group tasks into the least cores possible.</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="aggressive">Aggressive</string>
    <string name="power_saving_wq">Schedule workqueues on awake CPUs to save power.</string>
    <string name="cfs_scheduler_policy">CFS Scheduler Policy</string>
    <string name="cfs_scheduler_policy_summary">Policy decides the CFS scheduler how to balance tasks onto different CPU unit.</string>
    <string name="cpu_quiet">CPUQuiet</string>
    <string name="cpu_quiet_summary">CPUQuiet implements pluggable policies for forcing cpu cores into quiescent state. Appropriate policies will save power without hurting performance.</string>
    <string name="cpu_quiet_governor">CPUQuiet Governor</string>
    <string name="msm_limiter">MSM Limiter</string>
    <string name="msm_limiter_summary">Enable MSM Limiter by neobuddy89.</string>
    <string name="freq_control">Frequency Control</string>
    <string name="freq_control_summary">Allow MSM Limiter to Control the Frequencies of your CPUs.</string>
    <string name="cpu_boost">CPU Boost</string>
    <string name="stune_boost">Stune Boost</string>
    <string name="delay">Delay</string>
    <string name="profile_tasker">Profile Tasker</string>
    <string name="profile_tasker_toast">Show toast when tasker applies a profile</string>
    <string name="reset_settings">Reset App</string>
    <string name="reset_settings_summary">Reset User Settings</string>
    <string name="auto_update_check">Auto Update Check</string>
    <string name="check_update">Check for Updates</string>
    <string name="check_update_summary">Check for new versions of SmartPack-Kernel Manager</string>
    <string name="fahrenheit_summary">Use fahrenheit to measure temperature</string>
    <string name="force_english">Force displaying english language</string>
    <string name="user_interface">User interface</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="material_icon">Material Icon</string>
    <string name="banner_resizer">Banner Resizer</string>
    <string name="hide_banner">Hide Banner</string>
    <string name="force_cards_summary">Use cards for items if possible</string>
    <string name="accent_color">Accent Color</string>
    <string name="section_icons">Section Icons</string>
    <string name="enable_onboot">Enable On Boot</string>
    <string name="enable_onboot_summary">Allow SmartPack-Kernel Manager to run On Boot settings!</string>
    <string name="apply_on_boot_test_summary">Test apply on boot. This includes all kind of things which are getting applied during booting, such as custom controls, profiles, init.d, etc.</string>
    <string name="test">Test</string>
    <string name="hide">Hide</string>
    <string name="apply_on_boot_hide_summary">Hide the notification of apply on boot. Delay will still remain!</string>
    <string name="toast">Toast</string>
    <string name="confirmation_notification">Confirmation Notification</string>
    <string name="apply_on_boot_confirmation_notification_summary">After apply on boot with visible notification, show a notification afterwards with the confirmation that apply on boot was successful.</string>
    <string name="script">Script</string>
    <string name="apply_on_boot_script_summary">Use a shell script to apply settings. Please only enable this if you have troubles with apply on boot. If the problem still persists after enabling this option, please make sure no other app is conflicting with SmartPack-Kernel Manager.</string>
    <string name="security">Security</string>
    <string name="biometric">Biometric Authentication</string>
    <string name="biometric_summary">Use biometric authentication to protect SmartPack-Kernel Manager.</string>
    <string name="sections">Sections</string>
    <string name="default_section">Default Section</string>
    <string name="default_section_summary">The default tab to be displayed when opening the app!</string>
</resources>